# arrayfire-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  aliases.js  build.conf  build.rs  external_docs.css  generate_docs.sh  index.html  search-index.js  settings.html  source-files.js
af_cuda_interop/: all.html  fn.get_device_native_id.html  fn.get_stream.html  fn.set_device_native_id.html  index.html  sidebar-items.js
af_opencl_interop/: all.html  enum.DeviceType.html  enum.VendorPlatform.html  fn.add_device_context.html  fn.delete_device_context.html  fn.get_context.html  fn.get_device_id.html  fn.get_device_type.html  fn.get_platform.html  fn.get_queue.html  fn.set_device_context.html  fn.set_device_id.html  index.html  sidebar-items.js
arrayfire/: AfError.t.html  Callback.t.html  ColorMap.t.html  ColorSpace.t.html  Connectivity.t.html  ConstGenerator.t.html  ConvDomain.t.html  DiffusionEq.t.html  Dim4.t.html  ErrorCallback.t.html  FluxFn.t.html  HomographyType.t.html  Indexable.t.html  Indexer.t.html  InterpType.t.html  MERSENNE.v.html  MarkerType.t.html  MatProp.t.html  MatchType.t.html  MomentType.t.html  NormType.t.html  THREEFRY.v.html  acos.v.html  acosh.v.html  add.v.html  af_print.m.html  all.html  all_true_all.v.html  anisotropic_diffusion.v.html  any_true.v.html  arg.v.html  array_and_matrix_manipulation.html  asin.v.html  assign_gen.v.html  assign_seq.v.html  bitand.v.html  bitxor.v.html  col.v.html  color_space.v.html  configuring_arrayfire_environment.html  (+573 more)
book/: 404.html  array_and_matrix_manipulation.html  configuring_arrayfire_environment.html  cuda-interop.html  getting_started.html  index.html  indexing.html  multi-threading.html  opencl-interop.html  print.html  searchindex.js  searchindex.json  vectorization.html
cuda-interop/: Cargo.toml  README.md
cuda-interop/examples/: cuda_af_app.rs  custom_kernel.rs
cuda-interop/examples/resources/: add.cu
cuda-interop/src/: lib.rs
doc/: array_and_matrix_manipulation.md  configuring_arrayfire_environment.md  getting_started.md  indexing.md  mathjax.script  vectorization.md
examples/: acoustic_wave.rs  conway.rs  fft.rs  helloworld.rs  histogram.rs  neural_network.rs  pi.rs  snow.rs  unified.rs  using_half.rs
lazy_static/: fn.initialize.html  index.html  macro.__lazy_static_create!.html  macro.lazy_static!.html  macro.lazy_static.html  trait.LazyStatic.html  trait.__Deref.html
libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_ALG.html  constant.AF_APPLETALK.html  constant.AF_ASH.html  constant.AF_ATMPVC.html  constant.AF_ATMSVC.html  constant.AF_AX25.html  constant.AF_BLUETOOTH.html  constant.AF_BRIDGE.html  constant.AF_CAIF.html  constant.AF_CAN.html  constant.AF_DECnet.html  constant.AF_ECONET.html  constant.AF_IB.html  constant.AF_IEEE802154.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  (+3534 more)
num/: all.html  fn.abs.html  fn.abs_sub.html  fn.cast.html  fn.checked_pow.html  fn.clamp.html  fn.one.html  fn.pow.html  fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  fn.signum.html  fn.zero.html  index.html  sidebar-items.js  struct.BigInt.html  struct.BigUint.html  struct.Complex.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.Float.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.PrimInt.html  trait.Saturating.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html  type.BigRational.html  type.Rational.html
num_bigint/: all.html  constant.ZERO_BIG_DIGIT.html  enum.ParseBigIntError.html  enum.Sign.html  index.html  struct.BigInt.html  struct.BigUint.html  struct.ParseBigIntError.html  trait.RandBigInt.html  trait.ToBigInt.html  trait.ToBigUint.html  type.BigDigit.html  type.DoubleBigDigit.html
num_complex/: all.html  index.html  struct.Complex.html  struct.ParseComplexError.html  type.Complex32.html  type.Complex64.html
num_integer/: all.html  fn.binomial.html  fn.cbrt.html  fn.div_ceil.html  fn.div_floor.html  fn.div_mod_floor.html  fn.div_rem.html  fn.gcd.html  fn.gcd_lcm.html  fn.lcm.html  fn.mod_floor.html  fn.multinomial.html  fn.nth_root.html  fn.sqrt.html  index.html  struct.ExtendedGcd.html  struct.IterBinomial.html  trait.Integer.html  trait.Roots.html
num_iter/: all.html  fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  index.html  struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
num_rational/: all.html  index.html  struct.ParseRatioError.html  struct.Ratio.html  type.BigRational.html  type.Rational.html  type.Rational32.html  type.Rational64.html
num_traits/: all.html  enum.FloatErrorKind.html  fn.clamp.html  index.html  sidebar-items.js  struct.ParseFloatError.html  trait.Num.html  trait.NumAssign.html  trait.NumAssignOps.html  trait.NumAssignRef.html  trait.NumOps.html  trait.NumRef.html  trait.RefNum.html
opencl-interop/: Cargo.toml  README.md
opencl-interop/examples/: custom_kernel.rs  ocl_af_app.rs  trivial.rs
opencl-interop/src/: lib.rs
rand/: all.html  fn.random.html  fn.sample.html  fn.thread_rng.html  fn.weak_rng.html  index.html  sidebar-items.js  struct.AsciiGenerator.html  struct.ChaChaRng.html  struct.Closed01.html  struct.Generator.html  struct.Isaac64Rng.html  struct.IsaacRng.html  struct.Open01.html  struct.OsRng.html  struct.StdRng.html  struct.ThreadRng.html  struct.XorShiftRng.html  trait.Rand.html  trait.Rng.html  (+1 more)
src/: dim4.rs  (+15 more)
(+2327 files in other folders)
