[package]
name = "arrayfire"
version = "3.1.2"
authors = ["Pradeep Garigipati <pradeep@arrayfire.com>",
		   "Jason Ramapuram <jason.ramapuram@gmail.com>"]
build = "build.rs"

[dependencies]
libc = "0.1.10"
num = "0.1.27"
time = "0.1.32"

[build-dependencies.rustc-serialize]
rustc-serialize = "0.3.16"

[lib]
name = "arrayfire"
path = "src/lib.rs"

[[example]]
name = "helloworld"
path = "examples/helloworld.rs"

[[example]]
name = "pi"
path = "examples/pi.rs"

[[example]]
name = "snow"
path = "examples/snow.rs"

[[example]]
name = "histogram"
path = "examples/histogram.rs"
