[package]
name          = "arrayfire"
description   = "ArrayFire is a high performance software library for parallel computing with an easy-to-use API. Its array based function set makes parallel programming simple. ArrayFire's multiple backends (CUDA, OpenCL and native CPU) make it platform independent and highly portable. A few lines of code in ArrayFire can replace dozens of lines of parallel computing code, saving you valuable time and lowering development costs. This crate provides Rust bindings for ArrayFire library."
version       = "3.3.0"
documentation = "http://arrayfire.github.io/arrayfire-rust/arrayfire/index.html"
homepage      = "https://github.com/arrayfire/arrayfire"
repository    = "https://github.com/arrayfire/arrayfire-rust"
authors       = ["Pradeep Garigipati <pradeep@arrayfire.com>", "Jason Ramapuram <jason.ramapuram@gmail.com>"]
readme        = "./README.md"
keywords      = ["CUDA", "OpenCL", "ArrayFire", "Compute"]
license       = "BSD-3-Clause"
build         = "build.rs"

[dependencies]
libc = "0.1.10"
num  = "0.1.27"
time = "0.1.32"
lazy_static = "0.2.1"

[build-dependencies]
rustc-serialize = "0.3.16"
rustc_version = "0.1.7"

[lib]
name = "arrayfire"
path = "src/lib.rs"

[[example]]
name = "helloworld"
path = "examples/helloworld.rs"

[[example]]
name = "unified"
path = "examples/unified.rs"

[[example]]
name = "pi"
path = "examples/pi.rs"

[[example]]
name = "snow"
path = "examples/snow.rs"

[[example]]
name = "histogram"
path = "examples/histogram.rs"
