[package]
edition       = "2018"
name          = "arrayfire"
description   = "ArrayFire is a high performance software library for parallel computing with an easy-to-use API. Its array based function set makes parallel programming simple. ArrayFire's multiple backends (CUDA, OpenCL and native CPU) make it platform independent and highly portable. A few lines of code in ArrayFire can replace dozens of lines of parallel computing code, saving you valuable time and lowering development costs. This crate provides Rust bindings for ArrayFire library."
version       = "3.8.0"
documentation = "http://arrayfire.github.io/arrayfire-rust/arrayfire/index.html"
homepage      = "https://github.com/arrayfire/arrayfire"
repository    = "https://github.com/arrayfire/arrayfire-rust"
authors       = ["Pradeep Garigipati <pradeep@arrayfire.com>", "Jason Ramapuram <jason.ramapuram@gmail.com>"]
readme        = "./README.md"
keywords      = ["CUDA", "OpenCL", "ArrayFire", "Compute"]
license       = "BSD-3-Clause"
build         = "build.rs"
exclude = [
    "arrayfire/*",
]

[workspace]
members = [
    "cuda-interop",
    "opencl-interop",
]

[lib]
name = "arrayfire"
path = "src/lib.rs"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./scripts/mathjax.script", ]

[features]
algorithm = []
arithmetic = []
blas = []
data = []
indexing = []
graphics = []
image = []
lapack = []
ml = []
macros = []
random = []
signal = []
sparse = []
statistics = []
vision = []
default = ["algorithm", "arithmetic", "blas", "data", "indexing", "graphics", "image", "lapack",
"ml", "macros", "random", "signal", "sparse", "statistics", "vision"]
afserde = ["serde"]

[dependencies]
libc = "0.2"
num  = "0.4.0"
lazy_static = "1.0"
half = "1.5.0"
mnist = {version="0.5.0", features = ["download"]}
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
half = "1.5.0"
serde_json = "1.0"
bincode = "1.3"

[build-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
rustc_version = "0.3.3"

[[example]]
name = "helloworld"
path = "examples/helloworld.rs"

[[example]]
name = "unified"
path = "examples/unified.rs"

[[example]]
name = "pi"
path = "examples/pi.rs"

[[example]]
name = "snow"
path = "examples/snow.rs"

[[example]]
name = "histogram"
path = "examples/histogram.rs"

[[example]]
name = "acoustic_wave"
path = "examples/acoustic_wave.rs"

[[example]]
name = "conway"
path = "examples/conway.rs"

[[example]]
name = "fft"
path = "examples/fft.rs"

[[example]]
name = "using_half"
path = "examples/using_half.rs"

[[example]]
name = "neural_network"
path = "examples/neural_network.rs"

