[package]
name = "af-cuda-interop"
version = "3.7.1"
description = "ArrayFire is a high performance software library for parallel computing with an easy-to-use API. This crate is an addition on top of ArrayFire crate to enable users to mix RAW OpenCL code in rust and ArrayFire."
authors = ["Pradeep Garigipati <pradeep@arrayfire.com>"]
documentation = "http://arrayfire.github.io/arrayfire-rust/af_cuda_interop/index.html"
homepage      = "https://github.com/arrayfire/arrayfire-rust"
repository    = "https://github.com/arrayfire/arrayfire-rust/tree/master/cuda-interop"
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
libc = "0.2"
arrayfire = { path = "../" }
cuda-runtime-sys = "0.3.0-alpha.1"

[dev-dependencies]
rustacuda = "0.1"
rustacuda_core = "0.1"

[[example]]
name = "afcuda_custom_kernel"
path = "examples/custom_kernel.rs"

[[example]]
name = "cuda_af_app"
path = "examples/cuda_af_app.rs"
