[package]
name = "af-opencl-interop"
version = "3.7.1"
description = "ArrayFire is a high performance software library for parallel computing with an easy-to-use API. This crate is an addition on top of ArrayFire crate to enable users to mix RAW CUDA code in rust and ArrayFire."
authors = ["Pradeep Garigipati <pradeep@arrayfire.com>"]
documentation = "http://arrayfire.github.io/arrayfire-rust/af_opencl_interop/index.html"
homepage      = "https://github.com/arrayfire/arrayfire-rust"
repository    = "https://github.com/arrayfire/arrayfire-rust/tree/master/opencl-interop"
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
libc = "0.2"
arrayfire = { path = "../" }
cl-sys = "0.4.2"

[dev-dependencies]
ocl-core = "0.11.2"

[[example]]
name = "afocl_custom_kernel"
path = "examples/custom_kernel.rs"

[[example]]
name = "ocl_af_app"
path = "examples/ocl_af_app.rs"
